--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
+    "mermaid": "^11.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
