--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
-    "oracledb": "^6.9.0"
+    "oracledb": "^6.9.0",
+    "pg": "^8.16.3"
   }
 }
