--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^3.0.5",
     "mermaid": "^11.11.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
